changed keynotes place

--- a/de/index.html
+++ b/de/index.html
@@ -321,6 +321,119 @@
 
     </section>
 
+    <!-- KEYNOTES -->
+    <section class="section section-dark" id="keynotes">
+
+        <div class="section-background">
+            <div class="section-background-image parallax" data-stellar-ratio="0.4">
+                <img alt="" src="../images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
+            </div>
+        </div>
+        <div class="container">
+
+            <h2 class="section-heading text-center">Keynotes</h2>
+            <p class="col-md-12 text-center">Kostenlose Keynotes für <strong>die Öffentlichkeit zugänglich</strong></p>
+
+            <div class="row">
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 16:30 bis 17:30 Uhr</h3>
+                    <img alt="Das Rechtsgefüge angesichts von Innovationen" src="../images/contents/conference.jpg"
+                         style="width: 100%;" title="Das Rechtsgefüge angesichts von Innovationen"/>
+
+                    <h3>Das Rechtsgefüge angesichts von Innovationen</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Recht und Innovation werden immer noch als Gegensätze dargestellt: Innovationen brauchen ein Umfeld mit wenig Regulierung, wenn sie entstehen sollen, wenn das Gesetz sie einschränken soll. Aber was
+                            würde passieren, wenn wir das Gesetz anders verstehen würden? Iris Champagne, Forscherin an der Pariser Dauphine-Universität, schlägt vor, diese Frage mit Hilfe der Konzeptionstheorien zu beantworten, um das Recht auf
+                            Unterstützung radikaler Innovationen zu konzipieren.</p>
+                    </div>
+                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
+                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
+                    </p>-->
+
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">Ich gehe zur
+                        Konferenz!</a></div>
+                </div>
+
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 11 bis 12 Uhr</h3>
+
+                    <img alt="Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie" src="../images/contents/conference2.jpg.jpg" style="width: 100%;"
+                         title="Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie"/>
+
+                    <h3>Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Im Kontext der Globalisierung wird bei der Transformation von Unternehmen häufig ein multikulturelles Umfeld berücksichtigt, beispielsweise der Standort von Tochterunternehmen, Zulieferern oder die
+                            Einstellung von Mitarbeitern. Der Erfolg dieser verschiedenen Situationen setzt voraus, dass die Unterschiede berücksichtigt werden Sicht, Arbeitsgewohnheiten, Prozess. Auf dieser Rheinseite wäre Deutsch wirklich
+                            pragmatischer?
+                        </p>
+                    </div>
+                    <!--<p>
+                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+                    </p>
+                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
+                                                                                           target="_blank"><img
+                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">Ich gehe zur Konferenz!</a></div>
+                </div>
+
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 14:30 bis 15:30 Uhr</h3>
+
+                    <img alt="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie" src="../images/contents/conference3.jpg.jpg"
+                         style="width: 100%;" title="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie"/>
+
+                    <h3>DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Um die Geschäftsleistung zum Zeitpunkt des 4.0 zu steigern, muss die gesamte Kette des Produkts in den Prozess der Digitalisierung des Verkaufs auf der Bestellung von der Produktion bis zur
+                            Lieferung integriert werden. Die Qualität des so konzipierten digitalen Kabels ist entscheidend für den Erfolg der Transformation.</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <p>
+                        Keynote von Frederic Sanuy<br>
+                    </p>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">Ich gehe zur
+                        Konferenz!</a>
+                    </div>
+                </div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Sonntag, 13. Oktober von 16.30 bis 19 Uhr</h3>
+
+                    <img alt="Abschlussabend" src="../images/contents/cloture.jpg"
+                         style="width: 100%;" title="Abschlussabend"/>
+
+                    <h3>Abschlussabend</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Sie arbeiteten 54 Stunden ohne Unterbrechung! Sie waren am Ende ihrer Idee angelangt. Gemeinsam haben sie eine Lösung gefunden und sind bereit, diese mit der Öffentlichkeit zu teilen und dem Urteil
+                            der Jury zu unterwerfen. Spannung!</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">Ich gehe zur Konferenz!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- DESCRIPTION
     ================================= -->
     <section class="about-section section-gray section" id="about">
@@ -612,118 +725,6 @@
 
         </div>
 
-    </section>
-
-    <section class="section section-dark" id="keynotes">
-
-        <div class="section-background">
-            <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                <img alt="" src="../images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
-            </div>
-        </div>
-        <div class="container">
-
-            <h2 class="section-heading text-center">Keynotes</h2>
-            <p class="col-md-12 text-center">Kostenlose Keynotes für <strong>die Öffentlichkeit zugänglich</strong></p>
-
-            <div class="row">
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 16:30 bis 17:30 Uhr</h3>
-                    <img alt="Das Rechtsgefüge angesichts von Innovationen" src="../images/contents/conference.jpg"
-                         style="width: 100%;" title="Das Rechtsgefüge angesichts von Innovationen"/>
-
-                    <h3>Das Rechtsgefüge angesichts von Innovationen</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Recht und Innovation werden immer noch als Gegensätze dargestellt: Innovationen brauchen ein Umfeld mit wenig Regulierung, wenn sie entstehen sollen, wenn das Gesetz sie einschränken soll. Aber was
-                            würde passieren, wenn wir das Gesetz anders verstehen würden? Iris Champagne, Forscherin an der Pariser Dauphine-Universität, schlägt vor, diese Frage mit Hilfe der Konzeptionstheorien zu beantworten, um das Recht auf
-                            Unterstützung radikaler Innovationen zu konzipieren.</p>
-                    </div>
-                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
-                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
-                    </p>-->
-
-                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">Ich gehe zur
-                        Konferenz!</a></div>
-                </div>
-
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 11 bis 12 Uhr</h3>
-
-                    <img alt="Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie" src="../images/contents/conference2.jpg.jpg" style="width: 100%;"
-                         title="Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie"/>
-
-                    <h3>Interkulturelle Beziehungen zwischen Frankreich und Deutschland in 4.0 Industrie</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Im Kontext der Globalisierung wird bei der Transformation von Unternehmen häufig ein multikulturelles Umfeld berücksichtigt, beispielsweise der Standort von Tochterunternehmen, Zulieferern oder die
-                            Einstellung von Mitarbeitern. Der Erfolg dieser verschiedenen Situationen setzt voraus, dass die Unterschiede berücksichtigt werden Sicht, Arbeitsgewohnheiten, Prozess. Auf dieser Rheinseite wäre Deutsch wirklich
-                            pragmatischer?
-                        </p>
-                    </div>
-                    <!--<p>
-                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
-                    </p>
-                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
-                                                                                           target="_blank"><img
-                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
-                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">Ich gehe zur Konferenz!</a></div>
-                </div>
-
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Samstag, 12. Oktober von 14:30 bis 15:30 Uhr</h3>
-
-                    <img alt="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie" src="../images/contents/conference3.jpg.jpg"
-                         style="width: 100%;" title="DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie"/>
-
-                    <h3>DAM-PIM-CMS, die Kundenbeziehung in der 4.0 Industrie</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Um die Geschäftsleistung zum Zeitpunkt des 4.0 zu steigern, muss die gesamte Kette des Produkts in den Prozess der Digitalisierung des Verkaufs auf der Bestellung von der Produktion bis zur
-                            Lieferung integriert werden. Die Qualität des so konzipierten digitalen Kabels ist entscheidend für den Erfolg der Transformation.</p>
-                        <!--<div class="read_more">
-                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
-                            <div class="read_more_content">
-                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
-                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
-                                    Watson.</p>
-                            </div>
-                        </div>-->
-                    </div>
-                    <p>
-                        Keynote von Frederic Sanuy<br>
-                    </p>
-                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
-                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">Ich gehe zur
-                        Konferenz!</a>
-                    </div>
-                </div>
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Sonntag, 13. Oktober von 16.30 bis 19 Uhr</h3>
-
-                    <img alt="Abschlussabend" src="../images/contents/cloture.jpg"
-                         style="width: 100%;" title="Abschlussabend"/>
-
-                    <h3>Abschlussabend</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Sie arbeiteten 54 Stunden ohne Unterbrechung! Sie waren am Ende ihrer Idee angelangt. Gemeinsam haben sie eine Lösung gefunden und sind bereit, diese mit der Öffentlichkeit zu teilen und dem Urteil
-                            der Jury zu unterwerfen. Spannung!</p>
-                        <!--<div class="read_more">
-                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
-                            <div class="read_more_content">
-                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
-                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
-                                    Watson.</p>
-                            </div>
-                        </div>-->
-                    </div>
-                        <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
-                        <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">Ich gehe zur Konferenz!</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
     </section>
 
     <!-- TEAM
