--- a/en/index.html
+++ b/en/index.html
@@ -324,6 +324,115 @@
 
     </section>
 
+    <!-- KEYNOTES -->
+    <section class="section section-dark" id="keynotes">
+
+        <div class="section-background">
+            <div class="section-background-image parallax" data-stellar-ratio="0.4">
+                <img alt="" src="../images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
+            </div>
+        </div>
+        <div class="container">
+
+            <h2 class="section-heading text-center">Keynotes</h2>
+            <p class="col-md-12 text-center">Free keynotes <strong>open to the public</strong></p>
+
+            <div class="row">
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 16:30 to 17:30</h3>
+                    <img alt="The fabric of law in the face of innovation" src="../images/contents/conference.jpg"
+                         style="width: 100%;" title="The fabric of law in the face of innovation"/>
+
+                    <h3>The fabric of law in the face of innovation</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Law and innovation are still presented as opposites: innovations need an environment with little regulation if we want to see them emerge when the law is supposed to limit them. But what would
+                            happen if we began to conceive the law differently? Iris Champagne, researcher at Paris Dauphine University proposes to answer this question by using the theories of conception in order to conceive the right to support
+                            radical innovations.</p>
+                    </div>
+                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
+                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
+                    </p>-->
+
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">I'm going!</a></div>
+                </div>
+
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 11h to 12h</h3>
+
+                    <img alt="Intercultural relations between France and Germany in Industry 4.0" src="../images/contents/conference2.jpg" style="width: 100%;"
+                         title="Intercultural relations between France and Germany in Industry 4.0"/>
+
+                    <h3>Intercultural relations between France and Germany in Industry 4.0</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">In a context of globalization, the transformation of companies is often taking into account multicultural environments, by the location of subsidiaries, suppliers, the recruitment of employees ...
+                            the success of these various situations requires to be aware of the differences point of view, work habits, process. Seen on this side of the Rhine, German would be really more pragmatic?
+                        </p>
+                    </div>
+                    <!--<p>
+                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+                    </p>
+                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
+                                                                                           target="_blank"><img
+                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">I'm going!</a></div>
+                </div>
+
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 14:30 to 15:30</h3>
+
+                    <img alt="DAM-PIM-CMS, the customer relationship in the industry 4.0" src="../images/contents/conference3.jpg"
+                         style="width: 100%;" title="DAM-PIM-CMS, the customer relationship in the industry 4.0"/>
+
+                    <h3>DAM-PIM-CMS, the customer relationship in the industry 4.0</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">To increase its business performance at the time of the 4.0, it is to integrate the whole chain of the product in its process of digitization of the sale on the order, from the production to the
+                            delivery. The quality of the digital wire thus conceived is essential to the success of the transformation.</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <p>
+                        Frederic Sanuy's keynote<br>
+                    </p>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">I'm going!</a>
+                    </div>
+                </div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Sunday, October 13 from 16h30 to 19h</h3>
+                    <img alt="Closing evening" src="../images/contents/cloture.jpg"
+                         style="width: 100%;" title="Closing evening"/>
+
+                    <h3>Closing evening</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">They worked 54 hours non stop! They went to the end of their idea. Together, they have found a solution and are ready to share it with the public and submit it to the verdict of the jury.
+                            Suspense!</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">I'm going!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- DESCRIPTION
     ================================= -->
     <section class="about-section section-gray section" id="about">
@@ -619,114 +728,6 @@
 
         </div>
 
-    </section>
-
-    <section class="section section-dark" id="keynotes">
-
-        <div class="section-background">
-            <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                <img alt="" src="../images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
-            </div>
-        </div>
-        <div class="container">
-
-            <h2 class="section-heading text-center">Keynotes</h2>
-            <p class="col-md-12 text-center">Free keynotes <strong>open to the public</strong></p>
-
-            <div class="row">
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 16:30 to 17:30</h3>
-                    <img alt="The fabric of law in the face of innovation" src="../images/contents/conference.jpg"
-                         style="width: 100%;" title="The fabric of law in the face of innovation"/>
-
-                    <h3>The fabric of law in the face of innovation</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Law and innovation are still presented as opposites: innovations need an environment with little regulation if we want to see them emerge when the law is supposed to limit them. But what would
-                            happen if we began to conceive the law differently? Iris Champagne, researcher at Paris Dauphine University proposes to answer this question by using the theories of conception in order to conceive the right to support
-                            radical innovations.</p>
-                    </div>
-                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
-                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
-                    </p>-->
-
-                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">I'm going!</a></div>
-                </div>
-
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 11h to 12h</h3>
-
-                    <img alt="Intercultural relations between France and Germany in Industry 4.0" src="../images/contents/conference2.jpg" style="width: 100%;"
-                         title="Intercultural relations between France and Germany in Industry 4.0"/>
-
-                    <h3>Intercultural relations between France and Germany in Industry 4.0</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">In a context of globalization, the transformation of companies is often taking into account multicultural environments, by the location of subsidiaries, suppliers, the recruitment of employees ...
-                            the success of these various situations requires to be aware of the differences point of view, work habits, process. Seen on this side of the Rhine, German would be really more pragmatic?
-                        </p>
-                    </div>
-                    <!--<p>
-                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
-                    </p>
-                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
-                                                                                           target="_blank"><img
-                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
-                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">I'm going!</a></div>
-                </div>
-
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Saturday, October 12 from 14:30 to 15:30</h3>
-
-                    <img alt="DAM-PIM-CMS, the customer relationship in the industry 4.0" src="../images/contents/conference3.jpg"
-                         style="width: 100%;" title="DAM-PIM-CMS, the customer relationship in the industry 4.0"/>
-
-                    <h3>DAM-PIM-CMS, the customer relationship in the industry 4.0</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">To increase its business performance at the time of the 4.0, it is to integrate the whole chain of the product in its process of digitization of the sale on the order, from the production to the
-                            delivery. The quality of the digital wire thus conceived is essential to the success of the transformation.</p>
-                        <!--<div class="read_more">
-                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
-                            <div class="read_more_content">
-                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
-                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
-                                    Watson.</p>
-                            </div>
-                        </div>-->
-                    </div>
-                    <p>
-                        Frederic Sanuy's keynote<br>
-                    </p>
-                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
-                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">I'm going!</a>
-                    </div>
-                </div>
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Sunday, October 13 from 16h30 to 19h</h3>
-                    <img alt="Closing evening" src="../images/contents/cloture.jpg"
-                         style="width: 100%;" title="Closing evening"/>
-
-                    <h3>Closing evening</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">They worked 54 hours non stop! They went to the end of their idea. Together, they have found a solution and are ready to share it with the public and submit it to the verdict of the jury.
-                            Suspense!</p>
-                        <!--<div class="read_more">
-                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
-                            <div class="read_more_content">
-                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
-                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
-                                    Watson.</p>
-                            </div>
-                        </div>-->
-                    </div>
-                        <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
-                        <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">I'm going!</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
     </section>
 
     <!-- TEAM
