--- a/index.html
+++ b/index.html
@@ -295,6 +295,112 @@
             </div>
         </div>
     </section>
+
+    <!-- KEYNOTES -->
+    <section class="section section-dark" id="keynotes">
+
+        <div class="section-background">
+            <div class="section-background-image parallax" data-stellar-ratio="0.4">
+                <img alt="" src="images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
+            </div>
+        </div>
+        <div class="container">
+
+            <h2 class="section-heading text-center">Keynotes</h2>
+            <p class="col-md-12 text-center">Des keynotes gratuites et <strong>ouvertes au public</strong></p>
+
+            <div class="row">
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samedi 12 octobre de 16h30 à 17h30</h3>
+                    <img alt="La fabrique du droit face à l'innovation" src="images/contents/conference.jpg"
+                         style="width: 100%;" title="La fabrique du droit face à l'innovation"/>
+                    <h3>La fabrique du droit face à l'innovation</h3>
+                    <div class="lead">
+                        <p style="font-size: 18px;">Le droit et les innovations sont encore aujourd’hui présentées comme opposés : les innovations ont besoin d’un environnement avec peu de régulation si nous voulons les voir émerger alors que le
+                            droit
+                            est censé les limité. Mais que se passerait-il si on commençait à concevoir le droit autrement ? Iris Champagne, chercheuse à l’Université Paris Dauphine propose de répondre à cette question en utilisant les théories de la
+                            conception afin de concevoir le droit pour supporter les innovations radicales.</p>
+                    </div>
+                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
+                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
+                    </p>-->
+
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">J'y vais !</a></div>
+                </div>
+
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samedi 12 octobre de 11h à 12h</h3>
+
+                    <img alt="Principes des organisations exponentielles" src="images/contents/conference2.jpg" style="width: 100%;" title="Principes des organisations exponentielles"/>
+
+                    <h3>Les relations interculturelles entre la France et l’Allemagne dans l’Industrie 4.0</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Dans un contexte de globalisation, la transformation des entreprises s'opère souvent en tenant compte d’environnements multiculturels, de part la localisation des filiales, des fournisseurs, le recrutement des collaborateurs… la réussite de ces diverses situations nécessite d’avoir conscience des différences de point de vue, d’habitudes de travail, de process. Vu de ce côté du Rhin, l’allemand serait vraiment plus pragmatique ?
+                        </p>
+                    </div>
+                    <!--<p>
+                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
+                    </p>
+                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
+                                                                                           target="_blank"><img
+                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">J'y vais !</a></div>
+                </div>
+
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Samedi 12 octobre de 14h30 à 15h30</h3>
+
+                    <img alt="DAM-PIM-CMS, la relation client dans l'industrie 4.0" src="images/contents/conference3.jpg"
+                         style="width: 100%;" title="DAM-PIM-CMS, la relation client dans l'industrie 4.0"/>
+
+                    <h3>DAM-PIM-CMS, la relation client dans l'industrie 4.0</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Augmenter sa performance business à l’heure du 4.0, c’est intégrer toute la chaîne du produit dans son process de digitalisation de la mise en vente à la commande, de la production à la livraison.
+                            La qualité du fil numérique ainsi conçu est essentiel à la réussite de la transformation. </p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <p>
+                        Keynote de Frederic Sanuy<br>
+                    </p>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">J'y vais !</a>
+                    </div>
+                </div>
+                <div class="about-text col-md-3">
+                    <h3 style="font-size: 20px; font-weight: bold;">Dimanche 13 octobre de 16h30 à 19h</h3>
+
+                    <img alt="Soirée de clôture" src="images/contents/cloture.jpg"
+                         style="width: 100%;" title="Soirée de clôture"/>
+
+                    <h3>Soirée de clôture</h3>
+
+                    <div class="lead">
+                        <p style="font-size: 18px;">Ils ont travaillé 54h non stop ! Ils sont allés au bout de leur idée. Ensemble, ils ont trouvé une solution et sont prêts à la partager avec le public et à la soumettre au verdict du jury. Suspens !</p>
+                        <!--<div class="read_more">
+                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
+                            <div class="read_more_content">
+                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
+                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
+                                    Watson.</p>
+                            </div>
+                        </div>-->
+                    </div>
+                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
+                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">J'y vais !</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- DESCRIPTION
 ================================= -->
     <section class="about-section section-gray section" id="about">
@@ -628,110 +734,6 @@
 </div>
 </section>-->
     <!-- KEYNOTES -->
-    <section class="section section-dark" id="keynotes">
-
-        <div class="section-background">
-            <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                <img alt="" src="images/backgrounds/background-keynote-hic.jpg" style="opacity: 0.08;">
-            </div>
-        </div>
-        <div class="container">
-
-            <h2 class="section-heading text-center">Keynotes</h2>
-            <p class="col-md-12 text-center">Des keynotes gratuites et <strong>ouvertes au public</strong></p>
-
-            <div class="row">
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Samedi 12 octobre de 16h30 à 17h30</h3>
-                    <img alt="La fabrique du droit face à l'innovation" src="images/contents/conference.jpg"
-                         style="width: 100%;" title="La fabrique du droit face à l'innovation"/>
-                    <h3>La fabrique du droit face à l'innovation</h3>
-                    <div class="lead">
-                        <p style="font-size: 18px;">Le droit et les innovations sont encore aujourd’hui présentées comme opposés : les innovations ont besoin d’un environnement avec peu de régulation si nous voulons les voir émerger alors que le
-                            droit
-                            est censé les limité. Mais que se passerait-il si on commençait à concevoir le droit autrement ? Iris Champagne, chercheuse à l’Université Paris Dauphine propose de répondre à cette question en utilisant les théories de la
-                            conception afin de concevoir le droit pour supporter les innovations radicales.</p>
-                    </div>
-                    <!--<p style="margin-bottom: 0;">Conférence donnée par Iris Champagne dans le cadre de sa thèse à l'Université Paris Dauphine</p><br>
-                    <p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img alt="Creaccro" src="images/contents/creaccro-h.jpg" style="height: 35px;"></a>
-                    </p>-->
-
-                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic-1-la-fabrique-du-droit-face-a-linnovation-74257679719" target="_blank">J'y vais !</a></div>
-                </div>
-
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Samedi 12 octobre de 11h à 12h</h3>
-
-                    <img alt="Principes des organisations exponentielles" src="images/contents/conference2.jpg" style="width: 100%;" title="Principes des organisations exponentielles"/>
-
-                    <h3>Les relations interculturelles entre la France et l’Allemagne dans l’Industrie 4.0</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Dans un contexte de globalisation, la transformation des entreprises s'opère souvent en tenant compte d’environnements multiculturels, de part la localisation des filiales, des fournisseurs, le recrutement des collaborateurs… la réussite de ces diverses situations nécessite d’avoir conscience des différences de point de vue, d’habitudes de travail, de process. Vu de ce côté du Rhin, l’allemand serait vraiment plus pragmatique ?
-                        </p>
-                    </div>
-                    <!--<p>
-                        Keynote de Yan-Erik Decorde, Ambassadeur <a href="http://exolever.com" target="_blank">Exolever.com</a><br>
-                    </p>
-                    <p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/"
-                                                                                           target="_blank"><img
-                            alt="CCI Alsace" src="images/contents/ccialsace.jpg" style="height: 33px;"></a></p>-->
-                    <div style="margin-bottom: 50px; margin-top: 20px;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic2-relations-interculturelles-74418027323" target="_blank">J'y vais !</a></div>
-                </div>
-
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Samedi 12 octobre de 14h30 à 15h30</h3>
-
-                    <img alt="DAM-PIM-CMS, la relation client dans l'industrie 4.0" src="images/contents/conference3.jpg"
-                         style="width: 100%;" title="DAM-PIM-CMS, la relation client dans l'industrie 4.0"/>
-
-                    <h3>DAM-PIM-CMS, la relation client dans l'industrie 4.0</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Augmenter sa performance business à l’heure du 4.0, c’est intégrer toute la chaîne du produit dans son process de digitalisation de la mise en vente à la commande, de la production à la livraison.
-                            La qualité du fil numérique ainsi conçu est essentiel à la réussite de la transformation. </p>
-                        <!--<div class="read_more">
-                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
-                            <div class="read_more_content">
-                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
-                                    Patrick Meyer a récemment été récompensé d'un Award par IBM pour son travail autour de
-                                    Watson.</p>
-                            </div>
-                        </div>-->
-                    </div>
-                        <p>
-                            Keynote de Frederic Sanuy<br>
-                        </p>
-                        <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
-                        <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-conference-hic3-dam-pim-cms-la-relation-client-dans-lindustrie-40-74423684243" target="_blank">J'y vais !</a>
-                        </div>
-                </div>
-                <div class="about-text col-md-3">
-                    <h3 style="font-size: 20px; font-weight: bold;">Dimanche 13 octobre de 16h30 à 19h</h3>
-
-                    <img alt="Soirée de clôture" src="images/contents/cloture.jpg"
-                         style="width: 100%;" title="Soirée de clôture"/>
-
-                    <h3>Soirée de clôture</h3>
-
-                    <div class="lead">
-                        <p style="font-size: 18px;">Ils ont travaillé 54h non stop ! Ils sont allés au bout de leur idée. Ensemble, ils ont trouvé une solution et sont prêts à la partager avec le public et à la soumettre au verdict du jury. Suspens !</p>
-                        <!--<div class="read_more">
-                            <a class="read_more_button" href="javascript:void(0)">En savoir plus</a>
-                            <div class="read_more_content">
-                                <p>Véritable expert travaillant pour de nombreux clients et sur différentes solutions,
-                                    Patrick Meyer a réce2mment été récompensé d'un Award par IBM pour son travail autour de
-                                    Watson.</p>
-                            </div>
-                        </div>-->
-                    </div>
-                    <!--<p><a href="https://www.soprasteria.com/" target="_blank"><img alt="Sopra Steria" src="images/contents/sopra.jpg" style="height: 33px;"></a></p>-->
-                    <div style="margin-bottom: 50px; margin-top: 0;"><a class="btn btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-soiree-de-cloture-73389761753" target="_blank">J'y vais !</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- TEAM
 ================================= -->
     <!-- Lundi 17/06/2019 en attente de coachs/jury-->
